<resources>
    <string name="app_name">Test</string>
    <string name="question">Input user name</string>
    <string name="input_user_name">User name</string>
    <string name="btn_text">Ok</string>
    <string name="list_of_repositories">Repositories list: </string>
    <string name="btn_web_text">Open in the internet</string>
    <string name="btn_save">Save user</string>
    <string name="btn_db">See data base</string>
</resources>
