<?xml version="1.0" encoding="utf-8"?>
<com.example.testapp.MainView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/question_top"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="@dimen/question_size" />

    <EditText
        android:id="@id/user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/question_height"
        android:layout_marginLeft="@dimen/edit_text_side"
        android:layout_marginRight="@dimen/edit_text_side"
        android:layout_marginTop="@dimen/edit_text_top"
        android:hint="@string/input_user_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/btn_ok_width"
        android:layout_height="@dimen/btn_ok_height"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/btn_ok_bottom"
        android:layout_marginLeft="@dimen/btn_ok_left"
        android:text="@string/btn_text" />
</com.example.testapp.MainView>