<?xml version="1.0" encoding="utf-8"?>
<com.example.testapp.feed.DefaultFeedView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/feed_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.v7.widget.Toolbar-->
    <!--android:id="@+id/my_toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp" />-->

    <LinearLayout
        android:id="@+id/user_head_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp" />

        <LinearLayout
            android:id="@+id/user_detail_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_detail_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/repo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:gravity="left|center"
        android:text="@string/list_of_repositories"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/repo_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_weight="2" />

    <LinearLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="500dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_web"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_web_text" />

        <Button
            android:id="@+id/btn_db"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_db" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/btn_save" />
    </LinearLayout>
</com.example.testapp.feed.DefaultFeedView>